[gd_scene load_steps=46 format=3 uid="uid://dd7jxb3adi5uf"]

[ext_resource type="Script" uid="uid://dl360of7mit5t" path="res://Scripts/boss.gd" id="1_wwfse"]
[ext_resource type="Texture2D" uid="uid://b2ssbxxgb7kcy" path="res://Sprites/catlightning-Sheet.png" id="2_cxrok"]
[ext_resource type="Texture2D" uid="uid://3av3tve7mwuj" path="res://Sprites/catmaligno-Sheet.png" id="2_wwfse"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qtle2"]
atlas = ExtResource("2_cxrok")
region = Rect2(0, 0, 32, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yq25j"]
atlas = ExtResource("2_cxrok")
region = Rect2(32, 0, 32, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_odcco"]
atlas = ExtResource("2_cxrok")
region = Rect2(64, 0, 32, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_q76ad"]
atlas = ExtResource("2_cxrok")
region = Rect2(96, 0, 32, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nuv35"]
atlas = ExtResource("2_cxrok")
region = Rect2(128, 0, 32, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lel8w"]
atlas = ExtResource("2_cxrok")
region = Rect2(160, 0, 32, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6xjeg"]
atlas = ExtResource("2_cxrok")
region = Rect2(192, 0, 32, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0blv"]
atlas = ExtResource("2_cxrok")
region = Rect2(224, 0, 32, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_42olf"]
atlas = ExtResource("2_cxrok")
region = Rect2(256, 0, 32, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbq6j"]
atlas = ExtResource("2_cxrok")
region = Rect2(288, 0, 32, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ursto"]
atlas = ExtResource("2_cxrok")
region = Rect2(320, 0, 32, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lo233"]
atlas = ExtResource("2_cxrok")
region = Rect2(352, 0, 32, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3eom"]
atlas = ExtResource("2_cxrok")
region = Rect2(384, 0, 32, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xxu5"]
atlas = ExtResource("2_cxrok")
region = Rect2(416, 0, 32, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxrok"]
atlas = ExtResource("2_wwfse")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewv5o"]
atlas = ExtResource("2_wwfse")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5t2u"]
atlas = ExtResource("2_wwfse")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfkk2"]
atlas = ExtResource("2_wwfse")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uye1q"]
atlas = ExtResource("2_wwfse")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbwar"]
atlas = ExtResource("2_wwfse")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k85sf"]
atlas = ExtResource("2_wwfse")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ox38k"]
atlas = ExtResource("2_wwfse")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lp2t7"]
atlas = ExtResource("2_wwfse")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_skdhm"]
atlas = ExtResource("2_wwfse")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aanve"]
atlas = ExtResource("2_wwfse")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vo53g"]
atlas = ExtResource("2_wwfse")
region = Rect2(480, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2h4ey"]
atlas = ExtResource("2_wwfse")
region = Rect2(512, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijygn"]
atlas = ExtResource("2_wwfse")
region = Rect2(544, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wwfse"]
atlas = ExtResource("2_wwfse")
region = Rect2(576, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mh6p8"]
atlas = ExtResource("2_wwfse")
region = Rect2(608, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukjjc"]
atlas = ExtResource("2_wwfse")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n725y"]
atlas = ExtResource("2_wwfse")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_mh6p8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtle2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yq25j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_odcco")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q76ad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nuv35")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lel8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6xjeg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0blv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42olf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbq6j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ursto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lo233")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3eom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xxu5")
}],
"loop": true,
"name": &"appear",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxrok")
}],
"loop": true,
"name": &"dashing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewv5o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5t2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfkk2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uye1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbwar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k85sf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ox38k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lp2t7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_skdhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aanve")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vo53g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2h4ey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijygn")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wwfse")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mh6p8")
}],
"loop": true,
"name": &"shielding",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukjjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n725y")
}],
"loop": true,
"name": &"spawning",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ha31o"]
size = Vector2(8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pa6b8"]
size = Vector2(8, 8)

[sub_resource type="Animation" id="Animation_yq25j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"dashing"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Flash:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AnimatedSprite2D:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ewv5o"]
resource_name = "appear"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"appear"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666666, 0.133333, 0.2, 0.266666, 0.333334, 0.4, 0.466666, 0.533334, 0.6, 0.666666, 0.733334, 0.8, 0.866666, 1.53333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 13]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -48)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Flash:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.2, 0.266667, 1.66667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [false, false, true, false, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatedSprite2D:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.166667, 0.246805, 0.266281, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, true, false, false, true, true]
}

[sub_resource type="Animation" id="Animation_qtle2"]
resource_name = "dashing"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"dashing"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.001),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.001),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_37v2q"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.075, 0.15, 0.225, 0.3, 0.375, 0.45, 0.525, 0.6, 0.675, 0.75, 0.825, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_q76ad"]
resource_name = "shielding"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"shielding"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_odcco"]
resource_name = "spawning"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"spawning"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.611765)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q76ad"]
_data = {
&"RESET": SubResource("Animation_yq25j"),
&"appear": SubResource("Animation_ewv5o"),
&"dashing": SubResource("Animation_qtle2"),
&"death": SubResource("Animation_37v2q"),
&"shielding": SubResource("Animation_q76ad"),
&"spawning": SubResource("Animation_odcco")
}

[node name="Boss" type="CharacterBody2D"]
z_index = 200
collision_layer = 32
collision_mask = 0
script = ExtResource("1_wwfse")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_mh6p8")
animation = &"dashing"
autoplay = "dashing"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_ha31o")

[node name="PlayerDetect" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 769

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetect"]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_pa6b8")

[node name="SwitchAction" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_q76ad")
}

[node name="Flash" type="ColorRect" parent="."]
visible = false
modulate = Color(1, 1, 0.878431, 1)
z_index = 3000
offset_left = -448.0
offset_top = -252.0
offset_right = 448.0
offset_bottom = 252.0
mouse_filter = 2

[connection signal="area_entered" from="PlayerDetect" to="." method="_on_player_detect_area_entered"]
[connection signal="body_entered" from="PlayerDetect" to="." method="_on_body_entered"]
[connection signal="body_exited" from="PlayerDetect" to="." method="_on_body_exited"]
[connection signal="timeout" from="SwitchAction" to="." method="_on_switch_action_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="current_animation_changed" from="AnimationPlayer" to="." method="_on_animation_player_current_animation_changed"]
